--- a/Notebook/02_Data Acquisition And Understanding.ipynb
+++ b/Notebook/02_Data Acquisition And Understanding.ipynb
@@ -19,7 +19,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 166,
       "metadata": {},
       "outputs": [
         {
@@ -178,7 +178,7 @@
               "4    41912  Riyadh       59500       False  "
             ]
           },
-          "execution_count": 35,
+          "execution_count": 166,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -242,7 +242,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 167,
       "id": "56bd6579",
       "metadata": {},
       "outputs": [
@@ -297,7 +297,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 168,
       "id": "592ab46a",
       "metadata": {},
       "outputs": [
@@ -603,7 +603,7 @@
               "Negotiable        NaN         NaN  "
             ]
           },
-          "execution_count": 37,
+          "execution_count": 168,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -668,7 +668,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 169,
       "metadata": {},
       "outputs": [
         {
@@ -828,7 +828,7 @@
               "14                                             [Used]  "
             ]
           },
-          "execution_count": 38,
+          "execution_count": 169,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -850,7 +850,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 170,
       "id": "de27b541",
       "metadata": {},
       "outputs": [],
@@ -959,7 +959,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 171,
       "id": "4912cb36",
       "metadata": {},
       "outputs": [
@@ -969,7 +969,7 @@
               "<Axes: >"
             ]
           },
-          "execution_count": 40,
+          "execution_count": 171,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -1007,7 +1007,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 172,
       "id": "ac225b88",
       "metadata": {},
       "outputs": [],
@@ -1061,7 +1061,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 173,
       "id": "f00ad75f",
       "metadata": {},
       "outputs": [
@@ -1142,7 +1142,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 174,
       "id": "6956d04e",
       "metadata": {},
       "outputs": [
@@ -1222,7 +1222,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 175,
       "id": "b603536a",
       "metadata": {},
       "outputs": [
@@ -1302,7 +1302,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 176,
       "id": "ba18c892",
       "metadata": {},
       "outputs": [
@@ -1390,7 +1390,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 177,
       "id": "6e104aca",
       "metadata": {},
       "outputs": [
@@ -1407,7 +1407,7 @@
               "np.int64(0)"
             ]
           },
-          "execution_count": 46,
+          "execution_count": 177,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1454,7 +1454,7 @@
       "id": "96f4374b",
       "metadata": {},
       "source": [
-        "Lorem ipsum"
+        "Strategi imputasi yang diterapkan menggunakan pendekatan yang **konservatif dan berorientasi pada konteks data**, di mana nilai **ukuran mesin** yang hilang diisi berdasarkan nilai yang paling sering muncul pada kendaraan dengan **tipe dan tahun produksi yang sama** agar tetap merefleksikan karakteristik teknis kendaraan; apabila setelah tahap tersebut masih terdapat nilai yang hilang, digunakan nilai ukuran mesin yang paling umum secara keseluruhan sebagai langkah pengaman. Selanjutnya, nilai **jenis transmisi** yang hilang diisi dengan kategori yang paling dominan dalam dataset, sedangkan nilai hilang pada kolom kategorikal lainnya diisi dengan label **“Unknown”** untuk menjaga kelengkapan data tanpa menimbulkan asumsi yang berlebihan."
       ]
     },
     {
@@ -1467,7 +1467,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 178,
       "id": "c967663f",
       "metadata": {},
       "outputs": [
@@ -1477,7 +1477,7 @@
               "(8248, 12)"
             ]
           },
-          "execution_count": 47,
+          "execution_count": 178,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1493,7 +1493,7 @@
       "id": "e7833e83",
       "metadata": {},
       "source": [
-        "Lorem ipsum"
+        "Selanjutnya dilakukan **penghapusan kolom yang tidak relevan atau tidak informatif** untuk analisis dan pemodelan, yaitu **`Link`** karena hanya berfungsi sebagai identifier unik dan tidak memiliki nilai prediktif, **`Condition`** karena seluruh observasinya bernilai sama (semua *“Used”*) sehingga tidak memberikan variasi informasi, serta **`Negotiable`** yang tidak digunakan dalam konteks pemodelan harga pada tahap ini; setelah proses ini, dataset tersisa **12 kolom** yang lebih ringkas dan fokus pada fitur-fitur yang berpotensi memengaruhi harga kendaraan."
       ]
     },
     {
@@ -1506,7 +1506,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 179,
       "id": "3cb63618",
       "metadata": {},
       "outputs": [
@@ -1532,7 +1532,7 @@
       "id": "35f297e5",
       "metadata": {},
       "source": [
-        "Lorem ipsum"
+        "Selanjutnya dilakukan **pemeriksaan dan penghapusan data duplikat**, di mana teridentifikasi **71 baris duplikat** dalam dataset; seluruh baris tersebut kemudian dihapus untuk mencegah bias dan redundansi dalam analisis maupun pemodelan, sehingga jumlah data berkurang menjadi **8.177 baris dengan 12 kolom**, yang merepresentasikan observasi unik dan lebih andal untuk tahap selanjutnya."
       ]
     },
     {
@@ -1545,7 +1545,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 180,
       "id": "bc330727",
       "metadata": {},
       "outputs": [
@@ -1553,82 +1553,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Jumlah baris setelah memastikan Price numerik: (5593, 12)\n"
-          ]
-        }
-      ],
-      "source": [
-        "df = df[pd.to_numeric(df['Price'], errors='coerce').notna()].copy()\n",
-        "df['Price'] = df['Price'].astype(float)\n",
-        "\n",
-        "print('Jumlah baris setelah memastikan Price numerik:', df.shape)\n",
-        "\n",
-        "def remove_outliers_iqr(df, col, k=1.5, verbose=True):\n",
-        "    \"\"\"\n",
-        "    Menghapus outlier berdasarkan metode IQR pada satu kolom numerik.\n",
-        "\n",
-        "    Parameters\n",
-        "    ----------\n",
-        "    df : pd.DataFrame\n",
-        "        DataFrame input.\n",
-        "    col : str\n",
-        "        Nama kolom numerik yang akan dicek outlier-nya.\n",
-        "    k : float, optional\n",
-        "        Faktor pengali IQR (default 1.5).\n",
-        "    verbose : bool, optional\n",
-        "        Jika True, akan print batas bawah/atas dan shape sebelum/sesudah.\n",
-        "\n",
-        "    Returns\n",
-        "    -------\n",
-        "    df_clean : pd.DataFrame\n",
-        "        DataFrame tanpa outlier pada kolom tersebut.\n",
-        "    bounds : tuple\n",
-        "        (lower_bound, upper_bound)\n",
-        "    \"\"\"\n",
-        "    Q1 = df[col].quantile(0.25)\n",
-        "    Q3 = df[col].quantile(0.75)\n",
-        "    IQR = Q3 - Q1\n",
-        "\n",
-        "    lower_bound = Q1 - k * IQR\n",
-        "    upper_bound = Q3 + k * IQR\n",
-        "\n",
-        "    mask = (df[col] >= lower_bound) & (df[col] <= upper_bound)\n",
-        "    df_clean = df[mask].copy()\n",
-        "\n",
-        "    if verbose:\n",
-        "        print(f'[{col}] Batas bawah: {lower_bound:.2f}, batas atas: {upper_bound:.2f}')\n",
-        "        print(f'Jumlah baris sebelum outlier removal: {df.shape}')\n",
-        "        print(f'Jumlah baris setelah outlier removal: {df_clean.shape}')\n",
-        "\n",
-        "    return df_clean, (lower_bound, upper_bound)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "1a410616",
-      "metadata": {},
-      "source": [
-        "Lorem ipsum"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "90afc097",
-      "metadata": {},
-      "source": [
-        "## 2.10 Konversi Tipe Data"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 50,
-      "id": "036392b5",
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
+            "Jumlah baris setelah memastikan Price numerik: (5593, 12)\n",
             "[Year] Batas bawah: 2005.50, batas atas: 2025.50\n",
             "[Year] Baris sebelum: 5593, setelah: 5318\n",
             "--------------------------------------------------\n",
@@ -1645,6 +1570,11 @@
         }
       ],
       "source": [
+        "df = df[pd.to_numeric(df['Price'], errors='coerce').notna()].copy()\n",
+        "df['Price'] = df['Price'].astype(float)\n",
+        "\n",
+        "print('Jumlah baris setelah memastikan Price numerik:', df.shape)\n",
+        "\n",
         "def remove_outliers_iqr(df, col, k=1.5, verbose=True):\n",
         "    Q1 = df[col].quantile(0.25)\n",
         "    Q3 = df[col].quantile(0.75)\n",
@@ -1671,10 +1601,79 @@
     },
     {
       "cell_type": "markdown",
+      "id": "1a410616",
+      "metadata": {},
+      "source": [
+        "Pada tahap ini dilakukan **pembersihan lanjutan dengan metode IQR secara berurutan pada beberapa kolom numerik**, dimulai dengan memastikan kolom `Price` hanya berisi nilai numerik sehingga dataset menyisakan **5.593 baris** yang valid; selanjutnya, outlier dihapus secara bertahap menggunakan metode **Interquartile Range (IQR)** pada kolom `Year`, `Engine_Size`, `Mileage`, dan `Price`, di mana setiap kolom difilter berdasarkan batas bawah dan atas statistiknya masing-masing agar nilai yang tidak realistis atau ekstrem tidak mendistorsi analisis. Proses ini secara bertahap mengurangi jumlah data menjadi **4.781 baris**, dengan setiap penghapusan dilakukan secara terkontrol dan transparan (ditunjukkan oleh jumlah baris sebelum dan sesudah), sehingga dataset akhir menjadi lebih bersih, stabil, dan representatif untuk analisis lanjutan maupun pemodelan regresi harga kendaraan."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "90afc097",
+      "metadata": {},
+      "source": [
+        "## 2.11 Konversi Tipe Data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 181,
+      "id": "dbfc27e3",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "Index: 4781 entries, 0 to 8176\n",
+            "Data columns (total 12 columns):\n",
+            " #   Column       Non-Null Count  Dtype   \n",
+            "---  ------       --------------  -----   \n",
+            " 0   Make         4781 non-null   category\n",
+            " 1   Type         4781 non-null   category\n",
+            " 2   Year         4781 non-null   int64   \n",
+            " 3   Origin       4781 non-null   category\n",
+            " 4   Color        4781 non-null   category\n",
+            " 5   Options      4781 non-null   category\n",
+            " 6   Engine_Size  4781 non-null   float64 \n",
+            " 7   Fuel_Type    4781 non-null   category\n",
+            " 8   Gear_Type    4781 non-null   category\n",
+            " 9   Mileage      4781 non-null   int64   \n",
+            " 10  Region       4781 non-null   category\n",
+            " 11  Price        4781 non-null   float64 \n",
+            "dtypes: category(8), float64(2), int64(2)\n",
+            "memory usage: 244.6 KB\n"
+          ]
+        }
+      ],
+      "source": [
+        "# =========================\n",
+        "# 1. Kolom numerik\n",
+        "# =========================\n",
+        "numeric_cols = ['Year', 'Mileage', 'Engine_Size', 'Price']\n",
+        "for col in numeric_cols:\n",
+        "    df[col] = pd.to_numeric(df[col], errors='coerce')\n",
+        "\n",
+        "# =========================\n",
+        "# 2. Kolom kategorikal\n",
+        "# =========================\n",
+        "categorical_cols = [\n",
+        "    'Make', 'Type', 'Origin', 'Color',\n",
+        "    'Options', 'Fuel_Type', 'Gear_Type', 'Region'\n",
+        "]\n",
+        "for col in categorical_cols:\n",
+        "    df[col] = df[col].astype('category')\n",
+        "\n",
+        "df.info()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "64f66bdf",
       "metadata": {},
       "source": [
-        "Lorem ipsum"
+        "Pada tahap ini dilakukan **standarisasi tipe data** agar dataset siap digunakan untuk analisis dan pemodelan, di mana seluruh kolom **numerik** (`Year`, `Mileage`, `Engine_Size`, `Price`) dipastikan bertipe numerik untuk mendukung perhitungan statistik dan algoritma regresi, sementara kolom **kategorikal** (`Make`, `Type`, `Origin`, `Color`, `Options`, `Fuel_Type`, `Gear_Type`, `Region`) dikonversi ke tipe `category` untuk efisiensi memori dan kemudahan proses encoding; hasilnya, dataset akhir terdiri dari **4.781 baris dan 12 kolom** tanpa missing value, dengan komposisi **8 fitur kategorikal dan 4 fitur numerik**, serta penggunaan memori yang jauh lebih efisien (~245 KB), sehingga sudah berada pada kondisi yang bersih, konsisten, dan siap masuk ke tahap pemodelan."
       ]
     },
     {
@@ -1682,7 +1681,7 @@
       "id": "d17336be",
       "metadata": {},
       "source": [
-        "## 2.10 Exploratory Data Analysis"
+        "## 2.11 Exploratory Data Analysis"
       ]
     },
     {
@@ -1690,12 +1689,12 @@
       "id": "90e00797",
       "metadata": {},
       "source": [
-        "### 2.10.1 Analisis Univariat"
+        "### 2.11.1 Analisis Univariat"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 182,
       "id": "28ec2f05",
       "metadata": {},
       "outputs": [
@@ -1767,7 +1766,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 183,
       "id": "b16f538b",
       "metadata": {},
       "outputs": [
@@ -1839,7 +1838,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 184,
       "id": "06f9ee37",
       "metadata": {},
       "outputs": [
@@ -1911,7 +1910,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 185,
       "id": "a9a92aa7",
       "metadata": {},
       "outputs": [],
@@ -1987,7 +1986,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 186,
       "id": "9fbb0c28",
       "metadata": {},
       "outputs": [
@@ -2012,7 +2011,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 187,
       "id": "59fe59dd",
       "metadata": {},
       "outputs": [
@@ -2037,7 +2036,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 188,
       "id": "4403b344",
       "metadata": {},
       "outputs": [
@@ -2062,7 +2061,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 189,
       "id": "acda230b",
       "metadata": {},
       "outputs": [
@@ -2087,7 +2086,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 190,
       "id": "7ddec250",
       "metadata": {},
       "outputs": [
@@ -2112,7 +2111,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 191,
       "id": "6ff37fc5",
       "metadata": {},
       "outputs": [
@@ -2137,7 +2136,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 192,
       "id": "1c97a108",
       "metadata": {},
       "outputs": [
@@ -2162,7 +2161,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 193,
       "id": "a48d8d46",
       "metadata": {},
       "outputs": [
@@ -2190,12 +2189,12 @@
       "id": "7ce91cc2",
       "metadata": {},
       "source": [
-        "### 2.10.2 Analisis Bivariat"
+        "### 2.11.2 Analisis Bivariat"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 194,
       "id": "df2e1819",
       "metadata": {},
       "outputs": [],
@@ -2255,7 +2254,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 195,
       "id": "84313e63",
       "metadata": {},
       "outputs": [
@@ -2310,7 +2309,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 196,
       "id": "18e1368b",
       "metadata": {},
       "outputs": [
@@ -2335,7 +2334,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": 197,
       "id": "5761e9ea",
       "metadata": {},
       "outputs": [
@@ -2368,7 +2367,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 198,
       "id": "c89ba2c2",
       "metadata": {},
       "outputs": [
