--- a/Notebook/02_Data Acquisition And Understanding.ipynb
+++ b/Notebook/02_Data Acquisition And Understanding.ipynb
@@ -2362,7 +2362,7 @@
       "id": "0237b956",
       "metadata": {},
       "source": [
-        "## 2.11 Simpan Dataset Bersih (Opsional)"
+        "## 2.11 Simpan Dataset Bersih"
       ]
     },
     {
