Tambahkan placeholder Lorem di EDA.

--- a/Notebook/02_Data Acquisition And Understanding.ipynb
+++ b/Notebook/02_Data Acquisition And Understanding.ipynb
@@ -1765,6 +1765,14 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "id": "aa8793d4",
+      "metadata": {},
+      "source": [
+        "Lorem Ipsum"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 183,
       "id": "b16f538b",
@@ -1837,6 +1845,14 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "id": "df5ea3d8",
+      "metadata": {},
+      "source": [
+        "Lorem Ipsum"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 184,
       "id": "06f9ee37",
@@ -1906,6 +1922,14 @@
       ],
       "source": [
         "check_normality(df, ['Price'])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "c7cdbf9d",
+      "metadata": {},
+      "source": [
+        "Lorem Ipsum"
       ]
     },
     {
@@ -2010,6 +2034,14 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "id": "fd85e5da",
+      "metadata": {},
+      "source": [
+        "Lorem Ipsum"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 187,
       "id": "59fe59dd",
@@ -2032,6 +2064,14 @@
         "    cols=['Type'],\n",
         "    top_n=10\n",
         ")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "285ead17",
+      "metadata": {},
+      "source": [
+        "Lorem Ipsum"
       ]
     },
     {
@@ -2060,6 +2100,14 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "id": "46ee16c2",
+      "metadata": {},
+      "source": [
+        "Lorem Ipsum"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 189,
       "id": "acda230b",
@@ -2082,6 +2130,14 @@
         "    cols=['Color'],\n",
         "    top_n=10\n",
         ")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "9cb972ad",
+      "metadata": {},
+      "source": [
+        "Lorem Ipsum"
       ]
     },
     {
@@ -2110,6 +2166,14 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "id": "3092f1cc",
+      "metadata": {},
+      "source": [
+        "Lorem Ipsum"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 191,
       "id": "6ff37fc5",
@@ -2132,6 +2196,14 @@
         "    cols=['Fuel_Type'],\n",
         "    top_n=5\n",
         ")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "18421dd1",
+      "metadata": {},
+      "source": [
+        "Lorem Ipsum"
       ]
     },
     {
@@ -2160,6 +2232,14 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "id": "ab83efdf",
+      "metadata": {},
+      "source": [
+        "Lorem Ipsum"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 193,
       "id": "a48d8d46",
@@ -2182,6 +2262,14 @@
         "    cols=['Region'],\n",
         "    top_n=10\n",
         ")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "9aaf69cd",
+      "metadata": {},
+      "source": [
+        "Lorem Ipsum"
       ]
     },
     {
@@ -2308,6 +2396,14 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "id": "bcf50c65",
+      "metadata": {},
+      "source": [
+        "Lorem Ipsum"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 196,
       "id": "18e1368b",
@@ -2333,6 +2429,14 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "id": "1f253b4f",
+      "metadata": {},
+      "source": [
+        "Lorem Ipsum"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 197,
       "id": "5761e9ea",
@@ -2355,6 +2459,14 @@
         "    x_col='Mileage',\n",
         "    y_col='Price'\n",
         ")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "53cb32a3",
+      "metadata": {},
+      "source": [
+        "Lorem Ipsum"
       ]
     },
     {
