Done interpret univariat.

--- a/Notebook/02_Data Acquisition And Understanding.ipynb
+++ b/Notebook/02_Data Acquisition And Understanding.ipynb
@@ -2028,7 +2028,7 @@
       "id": "fd85e5da",
       "metadata": {},
       "source": [
-        "Lorem Ipsum"
+        "Berdasarkan visualisasi **Komposisi Data: Make (Top 10)**, terlihat bahwa **Toyota** mendominasi dataset dengan porsi sekitar **22,2%**, menunjukkan posisi yang sangat kuat di pasar mobil bekas Arab Saudi, diikuti oleh **Hyundai** (**14,8%**) sebagai merek populer di segmen menengah; selanjutnya **Ford** dan **Chevrolet** menempati posisi berikutnya yang mencerminkan tingginya minat terhadap kendaraan Amerika, khususnya SUV dan pickup, sementara merek Jepang dan Korea lain seperti **Nissan**, **Kia**, dan **Mazda** tetap memiliki representasi yang signifikan; merek premium seperti **Lexus** dan **Mercedes** muncul dengan proporsi lebih kecil, yang mengindikasikan bahwa pasar didominasi oleh kendaraan mass-market, sehingga variabel **Make** memiliki distribusi yang tidak seimbang namun sangat informatif dan berpotensi kuat dalam memengaruhi harga kendaraan pada tahap pemodelan."
       ]
     },
     {
@@ -2061,7 +2061,7 @@
       "id": "285ead17",
       "metadata": {},
       "source": [
-        "Lorem Ipsum"
+        "Berdasarkan visualisasi **Komposisi Data: Type (Top 10)**, terlihat bahwa tipe **Accent** merupakan yang paling sering muncul dengan proporsi sekitar **4,3%**, diikuti oleh **Camry** (**3,6%**) dan **Sonata** (**3,3%**), yang menunjukkan dominasi **sedan kompak hingga menengah** dalam dataset; selain itu, kehadiran tipe seperti **Hilux**, **Tahoe**, **Yukon**, dan **Expedition** mengindikasikan peran signifikan **pickup dan SUV besar** di pasar mobil bekas Arab Saudi, sementara distribusi yang relatif merata antar tipe (masing-masing di bawah 5%) menunjukkan **keragaman model yang tinggi**, sehingga variabel **Type** memiliki kardinalitas besar dan berpotensi sangat informatif namun perlu penanganan encoding yang tepat pada tahap pemodelan."
       ]
     },
     {
@@ -2094,7 +2094,7 @@
       "id": "46ee16c2",
       "metadata": {},
       "source": [
-        "Lorem Ipsum"
+        "Berdasarkan visualisasi **Komposisi Data: Origin**, terlihat bahwa mayoritas kendaraan dalam dataset berasal dari **Saudi** dengan proporsi sangat dominan, yaitu sekitar **76,7%**, yang menunjukkan bahwa pasar mobil bekas didominasi oleh kendaraan dengan spesifikasi dan distribusi lokal; selanjutnya **Gulf Arabic** mencakup sekitar **12,4%**, diikuti oleh kategori **Other** sebesar **10,5%**, yang merepresentasikan kendaraan impor atau non-lokal, sementara kategori **Unknown** sangat kecil (**0,4%**) dan tidak signifikan secara analitis; distribusi yang timpang ini menunjukkan bahwa variabel **Origin** bersifat kategorikal dengan dominasi kuat pada satu kelas, namun tetap berpotensi informatif dalam menjelaskan perbedaan harga akibat asal kendaraan pada tahap pemodelan."
       ]
     },
     {
@@ -2127,7 +2127,7 @@
       "id": "9cb972ad",
       "metadata": {},
       "source": [
-        "Lorem Ipsum"
+        "Berdasarkan visualisasi **Komposisi Data: Color (Top 10)**, terlihat bahwa warna **putih** sangat mendominasi dataset dengan proporsi sekitar **42,4%**, yang mencerminkan preferensi pasar Arab Saudi terhadap warna terang karena faktor iklim dan kemudahan perawatan; warna **silver**, **hitam**, dan **abu-abu** menyusul dengan proporsi yang relatif seimbang (sekitar 10–12%), menunjukkan bahwa warna netral masih menjadi pilihan utama konsumen, sementara warna lain seperti **merah**, **biru**, **navy**, dan **golden** memiliki porsi yang jauh lebih kecil; distribusi ini mengindikasikan bahwa variabel **Color** bersifat tidak seimbang dan kemungkinan hanya memberikan pengaruh moderat terhadap harga, namun tetap relevan sebagai fitur pendukung dalam pemodelan."
       ]
     },
     {
@@ -2160,7 +2160,7 @@
       "id": "3092f1cc",
       "metadata": {},
       "source": [
-        "Lorem Ipsum"
+        "Berdasarkan visualisasi **Komposisi Data: Options**, terlihat bahwa distribusi fitur kelengkapan kendaraan relatif **seimbang** antara tiga kategori utama, dengan **Standard** sebagai yang paling dominan (**37,6%**), diikuti sangat dekat oleh **Full** (**34,5%**) dan **Semi Full** (**27,4%**), yang menunjukkan bahwa pasar mobil bekas tidak hanya didominasi oleh varian tertinggi tetapi juga oleh kendaraan dengan spesifikasi menengah hingga standar; sementara itu, kategori **Unknown** sangat kecil (**0,5%**) dan tidak signifikan secara analitis, sehingga variabel **Options** memiliki variasi yang jelas, relevan secara bisnis, dan berpotensi memberikan kontribusi penting dalam menjelaskan perbedaan harga pada tahap pemodelan."
       ]
     },
     {
@@ -2193,7 +2193,7 @@
       "id": "18421dd1",
       "metadata": {},
       "source": [
-        "Lorem Ipsum"
+        "Berdasarkan visualisasi **Komposisi Data: Fuel_Type**, terlihat bahwa jenis bahan bakar **Gas** sangat mendominasi dataset dengan proporsi sekitar **98,2%**, yang mencerminkan karakteristik pasar otomotif Arab Saudi yang masih sangat bergantung pada bahan bakar bensin; sementara itu, **Diesel** hanya mencakup sekitar **1,7%** dan **Hybrid** sangat kecil (**0,2%**), sehingga variasi pada variabel ini sangat terbatas. Kondisi ini menunjukkan bahwa meskipun **Fuel_Type** secara konsep relevan, kontribusinya terhadap pemodelan harga kemungkinan **minimal**, dan variabel ini dapat diperlakukan sebagai fitur pendukung atau bahkan dipertimbangkan untuk digabungkan (misalnya non-Gas vs Gas) tergantung pada kebutuhan model."
       ]
     },
     {
@@ -2226,7 +2226,7 @@
       "id": "ab83efdf",
       "metadata": {},
       "source": [
-        "Lorem Ipsum"
+        "Berdasarkan visualisasi **Komposisi Data: Gear_Type**, terlihat bahwa kendaraan dengan transmisi **Automatic** sangat mendominasi dataset dengan proporsi sekitar **90,4%**, sedangkan **Manual** hanya mencakup **9,6%**, yang mencerminkan preferensi pasar Arab Saudi terhadap kenyamanan transmisi otomatis; distribusi yang sangat timpang ini menunjukkan bahwa meskipun **Gear_Type** tetap relevan secara konseptual, variasinya terbatas sehingga kontribusinya terhadap pemodelan harga kemungkinan **lebih kecil** dibandingkan fitur lain seperti `Make`, `Type`, atau `Engine_Size`, dan dapat diperlakukan sebagai fitur biner pendukung dalam analisis lanjutan."
       ]
     },
     {
@@ -2259,7 +2259,7 @@
       "id": "9aaf69cd",
       "metadata": {},
       "source": [
-        "Lorem Ipsum"
+        "Berdasarkan visualisasi **Komposisi Data: Region (Top 10)**, terlihat bahwa **Riyadh** sangat mendominasi dataset dengan proporsi sekitar **42,6%**, diikuti oleh **Dammam** (**20,1%**) dan **Jeddah** (**14,4%**), yang mencerminkan konsentrasi aktivitas jual beli mobil bekas di pusat-pusat ekonomi dan metropolitan utama Arab Saudi; sementara region lain seperti **Al-Medina**, **Al-Ahsa**, **Qassim**, dan **Makkah** memiliki porsi yang jauh lebih kecil, menunjukkan pasar yang lebih terfragmentasi di luar kota besar. Distribusi ini menegaskan bahwa variabel **Region** bersifat tidak seimbang namun tetap relevan secara bisnis, karena perbedaan lokasi berpotensi memengaruhi harga akibat variasi permintaan, daya beli, dan karakteristik pasar lokal."
       ]
     },
     {
